Feat: 🎨 restructure settemplate.py and config

--- a/project/utils/configs.yaml
+++ b/project/utils/configs.yaml
@@ -1,9 +1,73 @@
 llama:
-  parameters:
+  params:
+     top_k : 30
      max_new_tokens : 500
-     top_k : 1
+     num_return_sequences: 1
+    
+  templates:
+      crawl:
+        company_info: |
+
+        product_info: |
+
+        system: |
+
+        prompt: |
+
+        company_info_default: |
+
+        product_info_default: |
+
+        prompt_default: |
+          
+        system_default: |
+                        You must distinguish among South Korea's mobile telecommunication companies (skt, kt, lg u+).
+
+                        Provide answers with ONLY 'yes' or 'no'. no more answer
 
 chatgpt:
-  parameters:
+  params:
+    model: gpt-3.5-turbo #gpt-4
     
-    
+  templates:
+    conversation:
+      meta_template: |
+                     내용 : {page_content}, 날짜 : {날짜}
+                     
+      prompt: |
+
+      system: |
+                          
+      prompt_default: |
+                    Given the following conversation and a follow up Input, rephrase the follow up Input to be a standalone Input, in its original language.
+      
+      system_default: |
+                      Chat History:{chat_history}ß
+                      Follow Up Input:{question}
+                      Standalone question:
+
+    report:
+      system: |
+
+      prompt: |
+
+      prompt_default: |
+                      Develop a analysis report about our cafe, Structure of report is follwing format
+                      Executive Summary: Provide a concise overview of the report's findings and recommendations.  
+                      Study Introduction: Introduce the company and its background, including its mission, vision, and core values.
+                      Methodology: Explain the research methods, data sources, and analytical tools used.
+                      Review of Statistics: Give a detailed analysis of each component, including market analysis, SWOT analysis, financial analysis, etc.
+                      Conclusion: Give a summary of the main findings and insights derived from the analysis
+                      References: Citations of the sources used in the report, ensuring credibility and transparency
+
+      system_default: |
+                      Here is a list about data our company {context}
+
+
+embedding:
+  params: None
+  
+
+
+  
+  
