--- a/project/user_data/asdf1234/template/configs.yaml
+++ b/project/user_data/asdf1234/template/configs.yaml
@@ -1,87 +1,106 @@
 llama:
   params:
-     top_k : 30
-     max_new_tokens : 500
-     num_return_sequences: 1
-    
+    top_k: 1
+    max_new_tokens: 2
+    num_return_sequences: 1
   templates:
-      crawl:
-        company_info: |
+    crawl:
+      company_info: ''
+      product_info: ''
+      system: ''
+      prompt: ''
+      company_info_default: "company info: Our company is called KT, and we primarily\
+        \ provide internet and telecommunications services. \nOur main competitors\
+        \ are SK Telecom and LG U+.\n"
+      product_info_default: 'product info: "KT Internet, KT GiGA Internet, and KT
+        10GiGA Internet are wired internet services provided by KT. They hold the
+        top position in the market with a 40.8% market share.
 
-        product_info: |
 
-        system: |
+        As for the product offerings:
 
-        prompt: |
 
-        company_info_default: |
+        KT Internet Super Premium offers a maximum speed of 10Gbps in both upload
+        and download, using FTTH optical LAN technology.
 
-        product_info_default: |
+        KT Internet Premium Plus provides a maximum speed of 5Gbps in both directions,
+        also utilizing FTTH technology.
 
-        prompt_default: |
-          
-        system_default: |
-                        You must distinguish among South Korea's mobile telecommunication companies (skt, kt, lg u+).
+        KT Internet Premium offers speeds of up to 2.5Gbps in both upload and download,
+        using FTTH optical LAN.
 
-                        Provide answers with ONLY 'yes' or 'no'. no more answer
+        KT Internet Essence delivers a maximum bidirectional speed of 1Gbps via optical
+        LAN.
 
+        KT Internet Basic offers speeds of up to 500Mbps in both directions, making
+        it one of the fastest gigabit internet options.
+
+        KT Internet Slim Plus offers the most budget-friendly plan among gigabit internet
+        options, with speeds limited to 200Mbps in both upload and download.
+
+        KT Internet Slim uses FTTH technology to provide a maximum bidirectional speed
+        of 100Mbps."
+
+        '
+      prompt_default: Does the input text seem to be talking about KT company or products?
+      system_default: 'You must distinguish among South Korea''s mobile telecommunication
+        companies (skt, kt, lg u+).
+
+        You must answer based on your judgment according to the question.
+
+        Only ''yes'' or ''no'' responses are acceptable. Any other response will not
+        be tolerated.
+
+        '
 chatgpt:
   params:
-    model: gpt-3.5-turbo #gpt-4
-    
+    model: gpt-3.5-turbo
   templates:
     conversation:
-      meta_template: |
-                     내용 : {page_content}, 날짜 : {날짜}
-                     
-      prompt: |
+      meta_template: '내용 : {page_content}, 날짜 : {날짜}
 
-      system: |
-                          
-      prompt_default: |
-                    Given the following conversation and a follow up Input, rephrase the follow up Input to be a standalone Input, in its original language.
-      
-      system_default: |
-                      Chat History:{chat_history}ß
-                      Follow Up Input:{question}
-                      Standalone question:
+        '
+      prompt: ''
+      system: ''
+      prompt_default: 'Given the following conversation and a follow up Input, rephrase
+        the follow up Input to be a standalone Input, in its original language.
 
+        '
+      system_default: 'Chat History:{chat_history}ß
+
+        Follow Up Input:{question}
+
+        Standalone question:
+
+        '
     report:
-      system: |
+      system: ''
+      prompt: ''
+      prompt_default: "Develop a analysis report about our cafe, Structure of report\
+        \ is follwing format\nExecutive Summary: Provide a concise overview of the\
+        \ report's findings and recommendations.  \nStudy Introduction: Introduce\
+        \ the company and its background, including its mission, vision, and core\
+        \ values.\nMethodology: Explain the research methods, data sources, and analytical\
+        \ tools used.\nReview of Statistics: Give a detailed analysis of each component,\
+        \ including market analysis, SWOT analysis, financial analysis, etc.\nConclusion:\
+        \ Give a summary of the main findings and insights derived from the analysis\n\
+        References: Citations of the sources used in the report, ensuring credibility\
+        \ and transparency\n\nHere is a list about data our company {context}\n"
+      system_default: 'Rephrase the conversation and the follow up query to be a standalone
+        query
 
-      prompt: |
+        and add the elements of swot analysis, 5 forces model, BCG matrix, P.E.S.T.E.L
+        analysis, 3C analysis and Business Model Canvas as the additional information.
 
-      prompt_default: |
-                      Develop a analysis report about our cafe, Structure of report is follwing format
-                      Executive Summary: Provide a concise overview of the report's findings and recommendations.  
-                      Study Introduction: Introduce the company and its background, including its mission, vision, and core values.
-                      Methodology: Explain the research methods, data sources, and analytical tools used.
-                      Review of Statistics: Give a detailed analysis of each component, including market analysis, SWOT analysis, financial analysis, etc.
-                      Conclusion: Give a summary of the main findings and insights derived from the analysis
-                      References: Citations of the sources used in the report, ensuring credibility and transparency
-                      
-                      Here is a list about data our company {context}
+        conversation: {chat_history}
 
-      system_default: |
-                      Rephrase the conversation and the follow up query to be a standalone query
-                      and add the elements of swot analysis, 5 forces model, BCG matrix, P.E.S.T.E.L analysis, 3C analysis and Business Model Canvas as the additional information.
-                      conversation: {chat_history}
-                      output must be korean
-      
-      
+        output must be korean
 
-    
+        '
     document:
-      prompt: |
+      prompt: ''
+      prompt_default: '내용 : {page_content}, 날짜 : {날짜}
 
-      prompt_default: |
-                      내용 : {page_content}, 날짜 : {날짜}
-
-
+        '
 embedding:
   params: None
-  
-
-
-  
-  
