--- a/project/user_data/asdf1234/template/configs.yaml
+++ b/project/user_data/asdf1234/template/configs.yaml
@@ -42,7 +42,10 @@ llama:
         of 100Mbps."
 
         '
-      prompt_default: Does the input text seem to be talking about KT company or products?
+      prompt_default: 'Does the input text seem to be talking about KT company or
+        products?
+
+        '
       system_default: 'You must distinguish among South Korea''s mobile telecommunication
         companies (skt, kt, lg u+).
 
@@ -62,26 +65,29 @@ chatgpt:
 
         '
       condense: ''
-      condense_default: 'Rephrase the conversation and the follow up query to be a standalone query, in its original language.
+      condense_default: 'Rephrase the conversation and the follow up query to be a
+        standalone query, in its original language.
 
         '
       system: ''
-      system_default: 'You are an expert of industry analysis. answer about the input by referring the following context : {context}
+      system_default: 'You are an expert of industry analysis. answer about the input
+        by referring the following context : {context}
 
         '
     report:
       prompt: ''
-      prompt_default: "Develop a analysis report in korean about the company, product or service, Structure of report\
-        \ is follwing format\nExecutive Summary: Provide a concise overview of the\
-        \ report's findings and recommendations.  \nStudy Introduction: Introduce\
-        \ the company and its background, including its mission, vision, and core\
-        \ values.\nMethodology: Explain the research methods, data sources, and analytical\
-        \ tools used.\nReview of Statistics: Give a detailed analysis of each component,\
-        \ including market analysis, SWOT analysis, 5 forces model, BCG matrix,\
-        \ P.E.S.T.E.L analysis, 3C analysis and Business Model Canvas, etc.\nConclusion:\
-        \ Give a summary of the main findings and insights derived from the analysis\n\
-        \ References: Citations of the sources used in the report, ensuring credibility\
-        \ and transparency\n\nHere is opinions about the company, product or service {context}\n"
+      prompt_default: "Develop a analysis report in korean about the company, product\
+        \ or service, Structure of report is follwing format\nExecutive Summary: Provide\
+        \ a concise overview of the report's findings and recommendations.  \nStudy\
+        \ Introduction: Introduce the company and its background, including its mission,\
+        \ vision, and core values.\nMethodology: Explain the research methods, data\
+        \ sources, and analytical tools used.\nReview of Statistics: Give a detailed\
+        \ analysis of each component, including market analysis, SWOT analysis, 5\
+        \ forces model, BCG matrix, P.E.S.T.E.L analysis, 3C analysis and Business\
+        \ Model Canvas, etc.\nConclusion: Give a summary of the main findings and\
+        \ insights derived from the analysis\nReferences: Citations of the sources\
+        \ used in the report, ensuring credibility and transparency\n\nHere is opinions\
+        \ about the company, product or service\n{context}\n"
       document: ''
       document_default: '내용 : {page_content}, 날짜 : {날짜}
 
