--- a/project/user_data/asdf1234/template/configs.yaml
+++ b/project/user_data/asdf1234/template/configs.yaml
@@ -42,19 +42,15 @@ llama:
         of 100Mbps."
 
         '
-      prompt_default: 'Does the entered text seem to express an evaluation or opinion about kt company or its products?
+      prompt_default: "If the entered text is in Korean, translate it into English and tell me if it's related to kt or kt products. Always start your response with 'yes' if it is, and 'no' if it's not.
 
-        '
+        "
       system_default: 'You must distinguish among South Korea''s mobile telecommunication
         companies (skt, kt, lg u+).
 
         You must answer based on your judgment according to the question.
 
-        Only ''yes'' or ''no'' responses are acceptable. Any other response will not
-        be tolerated.
-
-        If the entered text is in Korean, please translate it into English, then utilize the provided information and your knowledge to respond.
-
+        Only yes or no responses are acceptable. Any other response will not be tolerated.
 
         '
 chatgpt:
